# robosense_ac_perception

./: README.md  README_CN.md  download_model.sh
modules/: CMakeLists.txt  package.xml
modules/cmake/: check_platform.cmake  find_inferlib.cmake  ppseg.cmake  promptda.cmake  pv_post_process.cmake  yolov8.cmake
modules/config/: calibration.yaml  usr_config.yaml
modules/include/perception/: base_perception.h  interface.h
modules/include/perception/common/: basic_type.h  common.h  factory.h  hbdnn_utils.h  input_msg.h  msg.h  output_msg.h  queue.h  rknn_utils.h  time_record.h  trt_utils.h  utils.h  yaml.h
modules/include/perception/node/: ppseg_node.hpp  promptda_node.hpp  pv_post_process.node.hpp  ros_dep.h  yolov8_node.hpp
modules/include/perception/ppseg/: config.h  inner_type.h  model_attr.h  msg.h  params.h  postprocess.h  ppseg_nn_hbdnn.h  ppseg_nn_rk.h  ppseg_nn_trt.h  preprocess.h
modules/include/perception/promptda/: config.h  inner_type.h  model_attr.h  msg.h  params.h  postprocess.h  preprocess.h  promptda_nn_hbdnn.h  promptda_nn_rk.h  promptda_nn_trt.h
modules/include/perception/pv_post_process/: pv_post_process.hpp
modules/include/perception/yolov8/: config.h  inner_type.h  model_attr.h  msg.h  params.h  postprocess.h  preprocess.h  yolov8_det_nn_hbdnn.h  yolov8_det_nn_rk.h  yolov8_det_nn_trt.h
modules/launch/: ppseg.launch  promptda.launch  start_ppseg.py  start_promptda.py  start_yolov8.py  yolov8.launch
modules/rviz2_config/: rviz2_config_ppseg.rviz  rviz2_config_promptda.rviz  rviz2_config_yolov8.rviz
modules/rviz_config/: rviz_config_ppseg.rviz  rviz_config_promptda.rviz  rviz_config_yolov8.rviz
modules/src/: interface.cpp
modules/src/common/: common.cpp  input_msg.cpp  msg.cpp  out_msg.cpp
modules/src/node/: ppseg_node.cpp  promptda_node.cpp  pv_post_process_node.cpp  yolov8_node.cpp
modules/src/ppseg/: config.cpp  postprocess.cpp  ppseg_nn_hbdnn.cpp  ppseg_nn_rk.cpp  ppseg_nn_trt.cpp  preprocess.cpp
modules/src/promptda/: config.cpp  postprocess.cpp  preprocess.cpp  promptda_nn_hbdnn.cpp  promptda_nn_rk.cpp  promptda_nn_trt.cpp
modules/src/pv_post_process/: pv_post_process.cpp
modules/src/yolov8/: config.cpp  postprocess.cpp  preprocess.cpp  yolov8_det_nn_hbdnn.cpp  yolov8_det_nn_rk.cpp  yolov8_det_nn_trt.cpp
perception_msgs/: CMakeLists.txt  README.md  package.xml
perception_msgs/msg/: BBox2D.msg  ObjectInner.msg  ObjectInnerArray.msg  Vec2D.msg
perception_msgs/msgs/: Size3D.msg  Vec3D.msg
python/: README.md  conver_ros2_to_pkl.py  convert.py
python/PromptDA/: generate_video.py  test_on_pc.py
python/PromptDA/promptda/: promptda.py
python/PromptDA/promptda/utils/: depth_utils.py
python/mask2former/: get_dataset_colormap.py  mask2former_on_pc.py
python/rdkx5_convert/ppseg_ws/: 01_check.sh  02_preprocess.sh  03_build.sh  infer_ptq.py  ppseg_config_nv12.yaml  preprocess.py
