<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="swhe@robosense.cn">sti</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend condition="$ROS_VERSION == '1'">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == '1'">roscpp</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <buildtool_depend condition="$ROS_VERSION == '2'">ament_cmake</buildtool_depend>
  <build_depend condition="$ROS_VERSION == '2'">rclcpp</build_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <!-- common dependency -->
  <depend>std_msgs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
